// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Connection State Hook Generator generateConnectionStateHook generates useConnectionState hook 1`] = `
"/**
 * WebSocket connection state hook
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */

import { useState, useEffect } from "react";
import { getClient } from "../client";
import type { ConnectionState } from "../../orm/client";
export type { ConnectionState } from "../../orm/client";
/** Hook to observe the WebSocket connection state. */
export function useConnectionState(): ConnectionState {
  const [state, setState] = useState<ConnectionState>(() => getClient().realtime.connectionState);
  useEffect(() => {
    const client = getClient();
    if (!client.realtime.isEnabled) return;
    const unsubscribe = client.realtime.onConnectionStateChange(setState);
    return () => unsubscribe();
  }, []);
  return state;
}
"
`;

exports[`Subscription Barrel Generator generates barrel with subscription hooks and connection state 1`] = `
"/**
 * Subscription hooks barrel export
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
export * from "./useContactSubscription";
export * from "./useProjectSubscription";
export * from "./useConnectionState";"
`;

exports[`Subscription Hook Generator generateSubscriptionHook generates subscription hook for Contact table 1`] = `
"/**
 * Subscription hook for Contact
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */

import { useEffect, useMemo, useRef } from "react";
import { useQueryClient } from "@tanstack/react-query";
import { getClient } from "../client";
import type { SubscriptionEvent } from "../../orm/client";
import type { ContactSelect, ContactWithRelations } from "../../orm/input-types";
import type { InferSelectResult, StrictSelect } from "../../orm/select-types";
import { contactKeys } from "../query-keys";
export type { SubscriptionEvent, Unsubscribe } from "../../orm/client";
export type { ContactSelect, ContactWithRelations } from "../../orm/input-types";
export type ContactSubscriptionOptions<S extends ContactSelect> = {
  select: S;
  ids?: string[];
  onEvent: (event: SubscriptionEvent<InferSelectResult<ContactWithRelations, S>>) => void;
  onError?: (error: Error) => void;
  onComplete?: () => void;
  enabled?: boolean;
  invalidateQueries?: boolean;
} & StrictSelect<S, ContactSelect>;
/**
 * Subscription hook for Contact realtime events
 * 
 * Delegates to getClient().contact.subscribe().
 */
export function useContactSubscription<S extends ContactSelect>(options: ContactSubscriptionOptions<S>): void {
  const queryClient = useQueryClient();
  const optionsRef = useRef(options);
  optionsRef.current = options;
  const subscribeKey = useMemo(() => JSON.stringify({
    select: options.select,
    ids: options.ids
  }), [options.select, options.ids]);
  useEffect(() => {
    if (options.enabled === false) return;
    const client = getClient();
    const unsubscribe = client.contact.subscribe<S>({
      ...options,
      onEvent: (event: SubscriptionEvent<InferSelectResult<ContactWithRelations, S>>) => {
        optionsRef.current.onEvent(event);
        if (optionsRef.current.invalidateQueries !== false) queryClient.invalidateQueries({
          queryKey: contactKeys.all
        });
      },
      onError: (error: Error) => optionsRef.current.onError?.(error),
      onComplete: () => optionsRef.current.onComplete?.()
    });
    return () => unsubscribe();
  }, [options.enabled, subscribeKey, queryClient]);
}
"
`;

exports[`Subscription Hook Generator generateSubscriptionHook generates subscription hook for Project table 1`] = `
"/**
 * Subscription hook for Project
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */

import { useEffect, useMemo, useRef } from "react";
import { useQueryClient } from "@tanstack/react-query";
import { getClient } from "../client";
import type { SubscriptionEvent } from "../../orm/client";
import type { ProjectSelect, ProjectWithRelations } from "../../orm/input-types";
import type { InferSelectResult, StrictSelect } from "../../orm/select-types";
import { projectKeys } from "../query-keys";
export type { SubscriptionEvent, Unsubscribe } from "../../orm/client";
export type { ProjectSelect, ProjectWithRelations } from "../../orm/input-types";
export type ProjectSubscriptionOptions<S extends ProjectSelect> = {
  select: S;
  ids?: string[];
  onEvent: (event: SubscriptionEvent<InferSelectResult<ProjectWithRelations, S>>) => void;
  onError?: (error: Error) => void;
  onComplete?: () => void;
  enabled?: boolean;
  invalidateQueries?: boolean;
} & StrictSelect<S, ProjectSelect>;
/**
 * Subscription hook for Project realtime events
 * 
 * Delegates to getClient().project.subscribe().
 */
export function useProjectSubscription<S extends ProjectSelect>(options: ProjectSubscriptionOptions<S>): void {
  const queryClient = useQueryClient();
  const optionsRef = useRef(options);
  optionsRef.current = options;
  const subscribeKey = useMemo(() => JSON.stringify({
    select: options.select,
    ids: options.ids
  }), [options.select, options.ids]);
  useEffect(() => {
    if (options.enabled === false) return;
    const client = getClient();
    const unsubscribe = client.project.subscribe<S>({
      ...options,
      onEvent: (event: SubscriptionEvent<InferSelectResult<ProjectWithRelations, S>>) => {
        optionsRef.current.onEvent(event);
        if (optionsRef.current.invalidateQueries !== false) queryClient.invalidateQueries({
          queryKey: projectKeys.all
        });
      },
      onError: (error: Error) => optionsRef.current.onError?.(error),
      onComplete: () => optionsRef.current.onComplete?.()
    });
    return () => unsubscribe();
  }, [options.enabled, subscribeKey, queryClient]);
}
"
`;
